quick fix for background img

--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero{
-    background: url("../../img/background.png") left 78% center no-repeat;
+    background: url("./../../img/background.png") left 78% center no-repeat;
     background-color: $white;
     height: 100vh;
     min-height: 650px;
