--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ img {
 }
 
 .hero {
-  background: url("../../img/background.png") left 78% center no-repeat;
+  background: url("./../../img/background.png") left 78% center no-repeat;
   background-color: #f5f5f5;
   height: 100vh;
   min-height: 650px;
