add svg's and more flex for icons in bottom page

--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -5,3 +5,10 @@
     min-height: 650px;
     color: #292929;
 }
+
+.hero__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
