fix font url's, fix flexable menu__item in scss

--- a/css/components/_header.scss
+++ b/css/components/_header.scss
@@ -9,8 +9,9 @@
     align-items: center;
 }
 
-.menu_item {
-    margin-right: 15px;
+.menu__item {
+    margin-right: 27px;
+
     &:last-child {
         margin-right: 0;
     }
