--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
-@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans);
-@import url(http://fonts.googleapis.com/css?family=Play);
+@import url("http://fonts.googleapis.com/css?family=Alegreya+Sans");
+@import url("http://fonts.googleapis.com/css?family=Play");
 html,
 body {
   height: 100px;
@@ -116,10 +116,10 @@ img {
           align-items: center;
 }
 
-.menu_item {
-  margin-right: 15px;
+.menu__item {
+  margin-right: 27px;
 }
-.menu_item:last-child {
+.menu__item:last-child {
   margin-right: 0;
 }
 
