fix features var in imported scss

--- a/css/components/_features.scss
+++ b/css/components/_features.scss
@@ -1,10 +1,10 @@
-.feautes {
-    display: flex;   
+.features {
+    display: flex;
 }
 
-.feautes__item {
+.features__item {
     margin-right: 8px;
-    
+
     &:last-child {
         margin-right: 0;
     }
