--- a/css/main.scss
+++ b/css/main.scss
@@ -17,4 +17,5 @@ $white: #f5f5f5;
 // components
 @import "components/hero";
 @import "components/header";
-@import "components/features"
+@import "components/features";
+@import "components/feauter";
