--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -6,6 +6,10 @@
     color: #292929;
 }
 
+.hero__title-section {
+    width: 43%;
+}
+
 .hero__container {
     display: flex;
     flex-direction: column;
@@ -15,5 +19,14 @@
 
 .hero__main-title {
     font-size: 48px;
-    line-height: 1.1;
+    text-transform: uppercase;
+    line-height: 100%;
+    font-weight: bold;
+    margin-bottom: 22px;
+}
+
+.hero__title-desc {
+    font-size: 21px;
+    margin-bottom: 36px;
+    padding-right: 10%;
 }
