--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,10 @@ img {
   color: #292929;
 }
 
+.hero__title-section {
+  width: 43%;
+}
+
 .hero__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -97,7 +101,16 @@ img {
 
 .hero__main-title {
   font-size: 48px;
-  line-height: 1.1;
+  text-transform: uppercase;
+  line-height: 100%;
+  font-weight: bold;
+  margin-bottom: 22px;
+}
+
+.hero__title-desc {
+  font-size: 21px;
+  margin-bottom: 36px;
+  padding-right: 10%;
 }
 
 .header {
