--- a/css/main.css
+++ b/css/main.css
@@ -191,3 +191,20 @@ img {
   font-size: 16px;
   max-width: 85px;
 }
+
+.btn {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 18px 41px;
+  text-transform: uppercase;
+  border-radius: 100px;
+  line-height: 1;
+  text-decoration: none;
+}
+.btn--theme--red {
+  background: #E01F3D;
+  color: #fff;
+}
+.btn--theme--red:hover {
+  background: #CA1B36;
+}
