--- a/css/main.scss
+++ b/css/main.scss
@@ -19,3 +19,4 @@ $white: #f5f5f5;
 @import "components/header";
 @import "components/features";
 @import "components/feauter";
+@import "components/btn";
