--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -4,6 +4,14 @@
     height: 100vh;
     min-height: 650px;
     color: #292929;
+    position: relative;
+
+    &:before {
+        position: absolute;
+        bottom: -30px;
+        right: 10%;
+        content: url("../../img/plank.png");
+    }
 }
 
 .hero__title-section {
@@ -15,6 +23,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    padding: 24px 0 50px;
 }
 
 .hero__main-title {
