--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,13 @@ img {
   height: 100vh;
   min-height: 650px;
   color: #292929;
+  position: relative;
+}
+.hero:before {
+  position: absolute;
+  bottom: -30px;
+  right: 10%;
+  content: url("../../img/plank.png");
 }
 
 .hero__title-section {
@@ -97,6 +104,7 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100%;
+  padding: 24px 0 50px;
 }
 
 .hero__main-title {
