--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -1,5 +1,4 @@
 .hero {
-    background: url("./../../img/background.png") left 78% center no-repeat;
     background-color: $white;
     height: 100vh;
     min-height: 650px;
@@ -24,6 +23,7 @@
     justify-content: space-between;
     height: 100%;
     padding: 24px 0 50px;
+    background: url("./../../img/background.png") right center / 50% auto no-repeat;
 }
 
 .hero__main-title {
