--- a/css/layout.scss
+++ b/css/layout.scss
@@ -8,6 +8,9 @@ body {
     font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
     line-height: 1.42;
     position: relative;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: $baseFontSize;
 }
 
 .wrapper {
