--- a/css/main.scss
+++ b/css/main.scss
@@ -20,3 +20,7 @@ $white: #f5f5f5;
 @import "components/features";
 @import "components/feauter";
 @import "components/btn";
+@import "components/section";
+@import "components/headline";
+@import "components/benefits";
+@import "components/benefit";
