fix benefit's name in scss.

--- a/css/components/_benefits.scss
+++ b/css/components/_benefits.scss
@@ -1,8 +1,9 @@
-.benefints {
+.benefits {
     display: flex;
+    align-items: center;
 }
 
-.benefints__item {
+.benefits__item {
     flex: 1;
     margin: 0 3%;
 
