--- a/css/components/_benefit.scss
+++ b/css/components/_benefit.scss
@@ -2,6 +2,19 @@
     text-align: center;
 }
 
+.benefit__title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 7px;
+}
+
+.benefit__desc {
+    font-family: "Play";
+    font-size: 16px;
+    color: #666666;
+    width: 276px;
+}
+
 .benefit__image-wrapper {
     display: inline-block;
     width: 128px;
