fix url images for background, plank & seporator

--- a/css/components/_benefits.scss
+++ b/css/components/_benefits.scss
@@ -8,7 +8,7 @@
     position: relative;
 
     &:before {
-        content: url("./../img/seporator.png");
+        content: url("/img/seporator.png");
         position: absolute;
         top: 50px;
         right: 0;
