--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
-@import url("http://fonts.googleapis.com/css?family=Alegreya+Sans");
-@import url("http://fonts.googleapis.com/css?family=Play");
+@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans");
+@import url("https://fonts.googleapis.com/css?family=Play");
 html,
 body {
   height: 100px;
@@ -86,7 +86,7 @@ img {
   position: absolute;
   bottom: -30px;
   right: 10%;
-  content: url("/../img/plank.png");
+  content: url("/img/plank.png");
 }
 
 .hero__title-section {
@@ -106,7 +106,7 @@ img {
           justify-content: space-between;
   height: 100%;
   padding: 24px 0 50px;
-  background: url("./../img/background.png") right center/50% auto no-repeat;
+  background: url("/img/background.png") right center/50% auto no-repeat;
 }
 
 .hero__main-title {
@@ -276,7 +276,7 @@ img {
   position: relative;
 }
 .benefits__item:before {
-  content: url("./../img/seporator.png");
+  content: url("/img/seporator.png");
   position: absolute;
   top: 50px;
   right: 0;
