--- a/css/main.scss
+++ b/css/main.scss
@@ -10,8 +10,8 @@ $white: #f5f5f5;
 
 //setups
 @import "layout.scss";
-@import url("http://fonts.googleapis.com/css?family=Alegreya+Sans");
-@import url("http://fonts.googleapis.com/css?family=Play");
+@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans");
+@import url("https://fonts.googleapis.com/css?family=Play");
 
 
 // components
