--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -9,7 +9,7 @@
         position: absolute;
         bottom: -30px;
         right: 10%;
-        content: url("/img/plank.png");
+        content: url("https://inquisitor228rus.github.io/LSweb_beginnerAN/img/plank.png");
     }
 }
 
@@ -23,7 +23,7 @@
     justify-content: space-between;
     height: 100%;
     padding: 24px 0 50px;
-    background: url("/img/background.png") right center / 50% auto no-repeat;
+    background: url("https://inquisitor228rus.github.io/LSweb_beginnerAN/img/background.png") right center / 50% auto no-repeat;
 }
 
 .hero__main-title {
