--- a/css/main.scss
+++ b/css/main.scss
@@ -18,9 +18,13 @@ $white: #f5f5f5;
 @import "components/hero";
 @import "components/header";
 @import "components/features";
-@import "components/feauter";
+@import "components/feature";
 @import "components/btn";
+@import "components/menu";
+@import "components/phone-number";
 @import "components/section";
 @import "components/headline";
 @import "components/benefits";
 @import "components/benefit";
+@import "components/benefits-section";
+@import "components/reviews";
