--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -9,7 +9,7 @@
         position: absolute;
         bottom: -30px;
         right: 10%;
-        content: url("./img/plank.png");
+        content: url("../img/plank.png");
     }
 }
 
