--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -23,7 +23,7 @@
     justify-content: space-between;
     height: 100%;
     padding: 24px 0 50px;
-    background: url("./img/background.png") right center / 50% auto no-repeat;
+    background: url("../img/background.png") right center / 50% auto no-repeat;
 }
 
 .hero__main-title {
