--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ img {
           justify-content: space-between;
   height: 100%;
   padding: 24px 0 50px;
-  background: url("./img/background.png") right center/50% auto no-repeat;
+  background: url("../img/background.png") right center/50% auto no-repeat;
 }
 
 .hero__main-title {
@@ -276,7 +276,7 @@ img {
   position: relative;
 }
 .benefits__item:before {
-  content: url("/./../img/seporator.png");
+  content: url("../img/seporator.png");
   position: absolute;
   top: 50px;
   right: 0;
