added style in reviews section

--- a/css/components/_headline.scss
+++ b/css/components/_headline.scss
@@ -7,7 +7,7 @@
 }
 
 .headline__subtitle {
-    color: #666666;
+    color: $greyArticle;
     font-family: "Play";
     font-style: normal;
     font-weight: normal;
