--- a/css/layout.scss
+++ b/css/layout.scss
@@ -5,8 +5,8 @@ body {
 
 body {
     font-size: $baseFontSize;
-    font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
-    line-height: 1.42;
+    font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif, 'Play';
+    line-height: 1.15;
     position: relative;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
