added style for reviews and fix reviews

--- a/css/components/_feature.scss
+++ b/css/components/_feature.scss
@@ -4,10 +4,11 @@
 
 .feature__icon {
     width: 40.43px;
-    margin-right: 8px;
+    margin-right: 11px;
 }
 
 .feature__text {
     font-size: 16px;
     max-width: 85px;
+    margin-right: 8px
 }
