--- a/css/components/_reviews.scss
+++ b/css/components/_reviews.scss
@@ -1,10 +1,30 @@
 .reviews__display {
-    background: none;
+    // background: none;
     padding: 50px 45px 34px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    position: relative;
+
+    &::after {
+        content: "";
+        display: block;
+        width: 90px;
+        height: 90px;
+        background: #fff;
+        border-radius: 50%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: -22px;
+    }
 }
 
 .reviews__display-inner {
+    background-color: #F8FAF9;
     display: flex;
+    border: 42px solid #F8FaF9;
+    position: relative;
+    overflow: hidden;
 }
 
 .reviews__avatar {
@@ -38,4 +58,9 @@
 .reviews__author {
     font-size: 18px;
     font-weight: bold;
+}
+
+.reviews__switcher {
+    display: flex;
+    justify-content: center;
 }
