--- a/css/main.scss
+++ b/css/main.scss
@@ -30,3 +30,4 @@ $greyArticle: #666666;
 @import "components/benefits-section";
 @import "components/reviews";
 @import "components/interactive-avatar";
+@import "components/order";
