--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,28 +1,41 @@
+html {
+    font-size: $baseFontSize;
+  }
+
 html,
 body {
-    height: 100px;
+    height: 100%;
 }
 
 body {
-    font-size: $baseFontSize;
-    font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif, 'Play';
-    line-height: 1.15;
+    font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
+    // line-height: 1.15; для тестов. потом проверить
+    line-height: 1.42; // предполагаемый размер
     position: relative;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    // color: #666666;
 }
 
 .wrapper {
     position: relative;
-    width: 100;
+    width: 100%;
     min-width: $containerWidth + 20px;
     min-height: 100%;
     overflow: hidden;
 }
 
+.maincontent {
+    height: 100%;
+    transition: transform 1s;
+    will-change: transform;
+}
+
 .container {
-    width: $containerWidth;
+    max-width: $containerWidth;
+    width: 95%;
     margin: 0 auto;
+    position: relative;
 }
 
 h1,
@@ -69,4 +82,9 @@ a {
 img {
     display: block;
     max-width: 100%;
+}
+
+button {
+    border: none;
+    background: transparent;
 }
