--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,8 @@ $greyArticle: #666666;
 
 //setups
 @import "layout.scss";
-@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans");
+// @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans");
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,400i,700&display=swap&subset=cyrillic');
 @import url("https://fonts.googleapis.com/css?family=Play");
 
 
@@ -31,3 +32,6 @@ $greyArticle: #666666;
 @import "components/reviews";
 @import "components/interactive-avatar";
 @import "components/order";
+@import "components/form";
+@import "components/radio";
+@import "components/reviews__section";
