--- a/css/main.css
+++ b/css/main.css
@@ -531,6 +531,14 @@ button {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 24px;
 }
 .form__controls .radio {
   margin-bottom: 10px;
@@ -550,6 +558,19 @@ button {
   display: -ms-flexbox;
   display: flex;
   cursor: pointer;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.radio--checkbox .radio__visible {
+  border-radius: 0;
+}
+.radio--checkbox .radio__visible::before {
+  background: url("../img/icons/checkmark.png") center center no-repeat;
 }
 
 .radio__elem {
@@ -557,6 +578,10 @@ button {
 }
 .radio__elem:checked ~ .radio__visible::before {
   display: block;
+}
+
+.radio__title {
+  margin-left: 10px;
 }
 
 .radio__visible {
