--- a/css/components/_btn.scss
+++ b/css/components/_btn.scss
@@ -6,6 +6,8 @@
     border-radius: 100px;
     line-height: 1;
     text-decoration: none;
+    display: inline-block;
+    border: none;
 
     &--theme--red {
         background: #E01F3D;
@@ -16,4 +18,17 @@
             
         }
     }
+
+    &--theme--transparent {
+        background: transparent;
+        color: #fff;
+        text-transform: none;
+        font-size: 18px;
+        font-weight: normal;
+
+        &:hover {
+            color: black;
+        }
+    }
+
 }
