--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,8 @@ button {
   border-radius: 100px;
   line-height: 1;
   text-decoration: none;
+  display: inline-block;
+  border: none;
 }
 .btn--theme--red {
   background: #E01F3D;
@@ -200,6 +202,16 @@ button {
 }
 .btn--theme--red:hover {
   background: #CA1B36;
+}
+.btn--theme--transparent {
+  background: transparent;
+  color: #fff;
+  text-transform: none;
+  font-size: 18px;
+  font-weight: normal;
+}
+.btn--theme--transparent:hover {
+  color: black;
 }
 
 .menu__list {
@@ -610,4 +622,40 @@ button {
   bottom: -27px;
   left: 80px;
   content: url("../img/ball.png");
+}
+
+.fixed-menu {
+  position: fixed;
+  top: 35%;
+  right: 4%;
+  z-index: 100;
+}
+
+.fixed-menu__item {
+  margin-bottom: 5px;
+}
+.fixed-menu__item--active .fixed-menu__link {
+  border-color: #E01F3D;
+}
+
+.fixed-menu__link {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  display: block;
+  position: relative;
+}
+.fixed-menu__link::before {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #292929;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
