--- a/css/components/_interactive-avatar.scss
+++ b/css/components/_interactive-avatar.scss
@@ -10,6 +10,10 @@
     &--active {
         border-color: #E01F3D;
     }
+
+    &:hover {
+        border-color: #E01F3D;
+    }
 }
 
 .interactive-avatar__link {
